api/manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - image: europe-west2-docker.pkg.dev/azure-auth-335808/api/api:1.0
        name: api
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 2Gi
          requests:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 2Gi
        livenessProbe:
          httpGet:
            path: /ping
            port: 8080
          failureThreshold: 1
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /ping
            port: 8080
          failureThreshold: 1
          periodSeconds: 10
