api/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
  namespace: test
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "config-default"}'
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: api
  type: NodePort
