api/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: test
  annotations:
    networking.gke.io/managed-certificates: managed-cert
spec:
  rules:
  - host: api.josh.cts-gcp.com
    http:
      paths:
      - backend:
          service:
            name: api
            port:
              number: 8080
        path: /*
        pathType: ImplementationSpecific
